menemen.html and baklava.html

--- a/recipes/baklava.html
+++ b/recipes/baklava.html
@@ -5,45 +5,47 @@
     <title>Baklava</title>
 </head>
 <body>
-    <h1>Shakshuka</h1>
+    <h1>Baklava</h1>
     <img src="../img/baklava.jpg">
     <h2>Description</h2>
-    Shakshuka is a North African and Middle Eastern meal of <br>poached eggs 
-    in a simmering tomato sauce with spices. <br>It's easy, healthy and takes 
-    less than 30 minutes to make.
+    Baklava is a traditional pastry known for its sweet, <br>
+    rich flavor and flaky texture. It consists of phyllo <br>
+    (or filo) dough, nuts, spices, and a sugary syrup.
     <h2>Ingredients</h2>
     <ul>
 
-        <li>2 tablespoons olive oil</li>
-        <li>1 medium onion, diced</li>
-        <li>1 red bell pepper, seeded and diced</li>
-        <li>4 garlic cloves, finely chopped</li>
-        <li>2 teaspoon paprika</li>
-        <li>1 teaspoon cumin</li>
-        <li>¼ teaspoon chili powder</li>
-        <li>1 28-ounce can whole peeled tomatoes</li>
-        <li>6 large eggs</li>
-        <li>salt and pepper, to taste</li>
-        <li>1 small bunch fresh cilantro, chopped</li>
-        <li>1 small bunch fresh parsley, chopped</li>
+        <li>1 (16 ounce) package phyllo dough</li>
+        <li>1 pound chopped nuts</li>
+        <li>1 cup butter</li>
+        <li>1 teaspoon ground cinnamon</li>
+        <li>1 cup water</li>
+        <li>1 cup white sugar</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>½ cup honey</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-    <li>Heat olive oil in a large sauté pan on medium heat. <br>
-        Add the chopped bell pepper and onion and cook for <br>
-        5 minutes or until the onion becomes translucent.</li>
+    <li>Preheat oven to 350 degrees F(175 degrees C). <br>
+        Butter the bottoms and sides of a 9x13 inch pan.
+    </li>
 <br>
-    <li>Add garlic and spices and cook an additional minute.</li>
+    <li>Chop nuts and toss with cinnamon. Set aside. Unroll phyllo dough. <br>
+        Cut whole stack in half to fit pan. Cover phyllo with a dampened cloth <br>
+        to keep from drying out as you work. Place two sheets of dough in pan, <br>
+        butter thoroughly. Repeat until you have 8 sheets layered. Sprinkle <br>
+        2 - 3 tablespoons of nut mixture on top. Top with two sheets of dough, butter, <br>
+        nuts, layering as you go. The top layer should be about 6 - 8 sheets deep.</li>
 <br>
-    <li>Pour the can of tomatoes and juice into the pan and<br>
-        break down the tomatoes using a large spoon. Season<br>
-        with salt and pepper and bring the sauce to a simmer.</li>
+    <li>Using a sharp knife cut into diamond or square shapes all the way to the <br>
+        bottom of the pan. You may cut into 4 long rows the make diagonal cuts. <br>
+        Bake for about 50 minutes until baklava is golden and crisp.</li>
 <br>
-        <li>Use your large spoon to make small wells in the sauce <br>
-        and crack the eggs into each well. Cover the pan and cook <br>
-        for 5-8 minutes, or until the eggs are done to your liking.</li>
+    <li>Make sauce while baklava is baking. Boil sugar and water until sugar <br>
+        is melted. Add vanilla and honey. Simmer for about 20 minutes.</li>
 <br>
-        <li>Garnish with chopped cilantro and parsley.</li>
+    <li>Remove baklava from oven and immediately spoon sauce over it. Let cool. <br>
+        Serve in cupcake papers. This freezes well. Leave it uncovered as it gets <br>
+        soggy if it is wrapped up.</li>
     </ol>
 </body>
 </html>
