--- a/recipes/menemen.html
+++ b/recipes/menemen.html
@@ -5,7 +5,7 @@
     <title>Menemen</title>
 </head>
 <body>
-    <h1>Shakshuka</h1>
+    <h1>Menemen</h1>
     <img src="../img/menemen.jpeg">
     <h2>Description</h2>
     Classic one-pan Turkish egg dish menemen, <br>
