--- a/recipes/baklava.html
+++ b/recipes/baklava.html
@@ -9,8 +9,8 @@
     <img src="../img/baklava.jpg">
     <h2>Description</h2>
     Baklava is a traditional pastry known for its sweet, <br>
-    rich flavor and flaky texture. It consists of phyllo <br>
-    (or filo) dough, nuts, spices, and a sugary syrup.
+    rich flavor, and flaky texture. It consists of phyllo <br>
+    (or filo) dough, nuts, spices, and a sugary honey syrup.
     <h2>Ingredients</h2>
     <ul>
 
