--- a/recipes/shakshuka.html
+++ b/recipes/shakshuka.html
@@ -8,7 +8,7 @@
     <h1>Shakshuka</h1>
     <img src="../img/shakshuka.jpg">
     <h2>Description</h2>
-    Shakshuka is a North African and Middle Eastern meal of <br>poached eggs 
+    Shakshuka is a Middle Eastern and North African meal of <br>poached eggs 
     in a simmering tomato sauce with spices. <br>It's easy, healthy and takes 
     less than 30 minutes to make.
     <h2>Ingredients</h2>
