--- a/recipes/menemen.html
+++ b/recipes/menemen.html
@@ -8,7 +8,7 @@
     <h1>Menemen</h1>
     <img src="../img/menemen.jpeg">
     <h2>Description</h2>
-    Classic one-pan Turkish egg dish menemen, <br>
+    Menemen is a lassic one-pan Turkish egg dish, <br>
     which is scrambled eggs with tomatoes and green peppers.
     <h2>Ingredients</h2>
     <ul>
