--- a/recipes/menemen.html
+++ b/recipes/menemen.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Menemen</h1>
-    <img src="../img/menemen.jpeg">
+    <img src="/img/menemen.jpeg">
     <h2>Description</h2>
     Menemen is a lassic one-pan Turkish egg dish, <br>
     which is scrambled eggs with tomatoes and green peppers.
