--- a/recipes/baklava.html
+++ b/recipes/baklava.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Baklava</h1>
-    <img src="/img/baklava.jpg">
+    <img src="../img/baklava.jpg">
     <h2>Description</h2>
     Baklava is a traditional pastry known for its sweet, <br>
     rich flavor, and flaky texture. It consists of phyllo <br>
