--- a/recipes/shakshuka.html
+++ b/recipes/shakshuka.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Shakshuka</h1>
-    <img src="/img/shakshuka.jpg">
+    <img src="../img/shakshuka.jpg">
     <h2>Description</h2>
     Shakshuka is a Middle Eastern and North African meal of <br>poached eggs 
     in a simmering tomato sauce with spices. <br>It's easy, healthy and takes 
